examples/bad/01-UnknownType.Tms
int main () {
  char x = 's';
  return 0;
}